--- a/fase 2/desing.html
+++ b/fase 2/desing.html
@@ -89,7 +89,7 @@
     </main>
     <Footer class="footer">
         <div class="container">
-            <p>angel cmk @ diagonal</p>
+            <p>angel cmk @ diagonjhjhgjgjgjhal</p>
         </div>
     </Footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" ></script>    
