--- a/fase 2/desing.html
+++ b/fase 2/desing.html
@@ -20,7 +20,7 @@
             <span class="menu-icon">ver menu</span>
             <nav class="navigation">
                 <ul class="menu">
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="desing.html">Inicio</a></li>
                     <li><a href="flex.html">Temas</a> <ul class="submenu">
                         <li><a href="#">Tema 1</a></li>
                         <li><a href="#">Tema 2</a></li>
@@ -35,7 +35,7 @@
                             <li><a href="#">Actividad 2</a></li>
                         </ul>
                     </li>
-                    <li><a href="autor.html">Autor</a></li>
+                    <li><a href="D:\unad 2022\diseño de sitios web\acividad 1\Nueva carpeta\DSW-YEIFERPEDROZO-main\index.html">Autor</a></li>
                 </ul>
             </nav>
         </div>
@@ -46,10 +46,20 @@
             <dIv class="container">
                
                 <section>
-                    <h1 align="center">PROPOSITO DEL SITIO</h1>
+                    <h2 align="center">PROPOSITO DEL SITIO</h2>
                     <br>
                     <p>Un montón de contenido impresionante.</p>
                 </section>
+
+                <article>
+
+                <h1>Organización Internacional para la Estandarización</h1>
+
+                <p>La Organización Internacional para la Estandarización conocida como ISO, es un cuerpo internacional de establecimiento de estándares compuesto por representantes de varias organizaciones nacionales de estándares.</p>
+
+                <p>...</p>
+
+                </article>
 
             </dIv>
     </main>
