--- a/fase 2/desing.html
+++ b/fase 2/desing.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <div class="container logo-nav-container">
-            <a href="#" class="logo">Logo</a>
+            <a href="#" class="logo">HTML</a>
             <span class="menu-icon">ver menu</span>
             <nav class="navigation">
                 <ul class="menu">
@@ -44,7 +44,7 @@
     <main class="main">
 
             <dIv class="container">
-               
+          
                 <section>
                     <h2 align="center">PROPOSITO DEL SITIO</h2>
                     <br>
@@ -53,13 +53,47 @@
 
                 <article>
 
-                <h1>Organización Internacional para la Estandarización</h1>
+                <h1>ETIQUETAS BASICAS DE HTML</h1>
 
-                <p>La Organización Internacional para la Estandarización conocida como ISO, es un cuerpo internacional de establecimiento de estándares compuesto por representantes de varias organizaciones nacionales de estándares.</p>
+                <p>HTML es un markup language, lo que significa que está escrito con códigos que puede leer una persona sin que sea necesario 
+			compilarlo primero. En otras palabras, el texto en una página web está «marcado» con estos códigos para dar instrucciones 
+			al navegador web sobre cómo mostrar el texto. Estas etiquetas de marcado son las propias etiquetas HTML.</p>
 
-                <p>...</p>
+                <p>Cuando escribes código en HTML, estás escribiendo etiquetas HTML. Todas las etiquetas HTML están hechas con un número de partes 
+			específicas, incluyendo:</p>
+			
+			<ul>
 
+			<li> El carácter “menor que” <</li>
+			<li> Una palabra o carácter que determina qué etiqueta se está escribiendo </li>
+			<li> Cualquier número de atributos HTML que se quiera usar, escritos de la forma nombre =”valor” </li>
+			<li> El carácter “mayor que” > </li>
+
+			</ul>
+
+		<P>El hipertexto (HTML) es un lenguaje informático que forma la mayoría de las páginas web y plataformas online. HTML no se considera
+			 un lenguaje de programación, ya que no puede crear una funcionalidad dinámica. Sin embargo, los usuarios web pueden crear y 
+			 estructurar secciones, párrafos y enlaces usando elementos, etiquetas y atributos.</P>
                 </article>
+	    <h1>¿Cuáles son las etiquetas HTML básicas?</h1>
+
+	    <p>Hay una serie de etiquetas que son las más usadas para crear cualquier documento HTML, a continuación las explicamos:</p>
+		
+	    <ul>
+
+			<li><code>&lt;body&gt;</code> para el contenido</li>
+			<head> para información sobre el documento
+			<div> división dentro del contenido
+			<a> para enlaces
+			<strong> para poner el texto en negrita
+			<br> para saltos de línea
+			<H1>…<H6> para títulos dentro del contenido
+			<img> para añadir imágenes al documento
+			<ol> para listas ordenadas, <ul> para listas desordenadas, <li> para elementos dentro de la lista
+			<p> para parágrafos
+			<span> para estilos de una parte del texto
+
+	    </ul>	    	
 
             </dIv>
     </main>
