--- a/fase 2/desing.html
+++ b/fase 2/desing.html
@@ -21,7 +21,7 @@
             <nav class="navigation">
                 <ul class="menu">
                     <li><a href="desing.html">Inicio</a></li>
-                    <li><a href="flex.html">Temas</a> <ul class="submenu">
+                    <li><a href="#">Temas</a> <ul class="submenu">
                         <li><a href="#">Tema 1</a></li>
                         <li><a href="#">Tema 2</a></li>
                     </ul></li>
@@ -35,7 +35,7 @@
                             <li><a href="#">Actividad 2</a></li>
                         </ul>
                     </li>
-                    <li><a href="D:\unad 2022\diseño de sitios web\acividad 1\Nueva carpeta\DSW-YEIFERPEDROZO-main\index.html">Autor</a></li>
+                    <li><a href="../index.html">Autor</a></li>
                 </ul>
             </nav>
         </div>
@@ -48,9 +48,12 @@
                 <section>
                     <h2 align="center">PROPOSITO DEL SITIO</h2>
                     <br>
-                    <p>Un montón de contenido impresionante.</p>
+                    <p>El proposito de esta pagina es dar a conocer la etiquetas basicas y principios de la programacion 
+			de sitios web en HTML. </p>
+			
+			<div align="center"><img src="img/img1.png" alt="Imagen"></div>
                 </section>
-
+<br>
                 <article>
 
                 <h1>ETIQUETAS BASICAS DE HTML</h1>
@@ -82,16 +85,16 @@
 	    <ul>
 
 			<li><code>&lt;body&gt;</code> para el contenido</li>
-			<head> para información sobre el documento
-			<div> división dentro del contenido
-			<a> para enlaces
-			<strong> para poner el texto en negrita
-			<br> para saltos de línea
-			<H1>…<H6> para títulos dentro del contenido
-			<img> para añadir imágenes al documento
-			<ol> para listas ordenadas, <ul> para listas desordenadas, <li> para elementos dentro de la lista
-			<p> para parágrafos
-			<span> para estilos de una parte del texto
+			<li><code>&lt;head&gt;</code> para información sobre el documento</li>
+			<li><code>&lt;div&gt;</code> división dentro del contenido</li>
+			<li><code>&lt;a&gt;</code> para enlaces</li>
+			<li><code>&lt;strong&gt;</code> para poner el texto en negrita</li>
+			<li><code>&lt;br&gt;</code> para saltos de línea</li>
+			<li><code>&lt;h1&gt;</code>...<code>&lt;h6&gt;</code> para títulos dentro del contenido</li>
+			<li><code>&lt;img&gt;</code><img> para añadir imágenes al documento</li>
+			<li><code>&lt;ol&gt;</code> para listas ordenadas, <code>&lt;ul&gt;</code>  para listas desordenadas, <code>&lt;li&gt;</code>  para elementos dentro de la lista</li>
+			<li><code>&lt;p&gt;</code> para parágrafos</li>
+			<li><code>&lt;span&gt;</code> para estilos de una parte del texto</li>
 
 	    </ul>	    	
 
